--- a/templates/index.html
+++ b/templates/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
-    <h1>Compress Images</h1>
-    <form id="imageForm">
-        <label for="file">Choose files:</label>
-        <input type="file" id="file" name="files" multiple required>
-        <br>
-        <label for="quality">Quality:</label>
-        <input type="number" id="quality" name="quality" value="30">
-        <br>
-        <label for="resolution">Resolution (%):</label>
-        <input type="number" id="resolution" name="resolution" value="50">
-        <br>
-        <button type="submit">Compress and download</button>
-    </form>
-    <div id="result"></div>
+    <div class="container">
+        <h1>Compress Images</h1>
+        <form id="imageForm">
+            <label for="file">Choose files:</label>
+            <input type="file" id="file" name="files" multiple required>
+            <br>
+            <label for="quality">Quality:</label>
+            <input type="number" id="quality" name="quality" value="30">
+            <br>
+            <label for="resolution">Resolution (%):</label>
+            <input type="number" id="resolution" name="resolution" value="50">
+            <br>
+            <button type="submit">Compress and download</button>
+        </form>
+        <div id="result"></div>
+    </div>
 
     <script src="../static/index.js"></script>
 </body>
